force-app/main/default/objects/In_flight_Upgrade_Seat_Master__mdt/In_flight_Upgrade_Seat_Master__mdt.object-meta.xml
<CustomObject>
    <label>In-flight Upgrade Seat Master</label>
    <pluralLabel>In-flight Upgrade Seat Master</pluralLabel>
</CustomObject>