force-app/main/default/objects/In_flight_Upgrade_Seat_Master__mdt/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>