force-app/main/default/objects/In_flight_Upgrade_Seat_Master__mdt/fields/ROP_Award_Code__c.field-meta.xml
<CustomField>
    <fullName>ROP_Award_Code__c</fullName>
    <label>ROP Award Code</label>
    <referenceTo>ROP_Award_Code__mdt</referenceTo>
    <relationshipLabel>In-flight Upgrade Seat Master</relationshipLabel>
    <relationshipName>In_flight_Upgrade_Seat_Master</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>