force-app/main/default/objects/In_flight_Upgrade_Seat_Master__mdt/fields/Upgrade_From_Class__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_From_Class__c</fullName>
    <label>Upgrade From Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>